--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -42,3 +42,7 @@ jobs:
 
       - name: Send coverage to scrutinizer
         run: php ocular.phar code-coverage:upload --format=php-clover coverage.clover
+
+      - name: Coveralls GitHub Action
+        uses: coverallsapp/github-action@v1.1.1
+
