--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "psr-7",
         "psr-18"
     ],
+    "license": "MIT",
     "require": {
         "php": "^7.4",
         "ext-json": "*",
