slight refactor and fixes

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -5,7 +5,9 @@ build:
     analysis:
       project_setup:
         override: true
-    tests: true
+      tests:
+        override: [php-scrutinizer-run]
+
 
 filter:
   excluded_paths: [tests/*]
