--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "php": "^8.0",
         "ext-json": "*",
         "psr/http-client": "^1.0",
-        "psr/http-factory": "^1.0"
+        "psr/http-factory": "^1.0",
+        "thecodingmachine/safe": "^1.3"
     },
     "require-dev": {
         "nyholm/psr7": "^1.3",
@@ -54,10 +55,10 @@
         "preflight:analyse": [
             "@preflight:analyse:phpstan"
         ],
-        "preflight:analyse:phpstan": "phpstan analyse -c phpstan.neon.dist --no-progress",
+        "preflight:analyse:phpstan": "./vendor/bin/phpstan analyse -c phpstan.neon.dist --no-progress",
         "preflight:lint": [
-            "parallel-lint src tests",
-            "phpcs --cache=build/cache/phpcs.cache"
+            "./vendor/bin/parallel-lint src tests",
+            "./vendor/bin/phpcs"
         ],
         "preflight:test": "phpunit",
         "preflight:test:all": [
