--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
     },
     "require-dev": {
         "nyholm/psr7": "^1.3",
+        "pestphp/pest": "^1.17",
         "php-parallel-lint/php-parallel-lint": "^1.2",
         "phpspec/prophecy-phpunit": "^2.0",
         "phpunit/phpunit": "^9.1",
