--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -35,4 +35,4 @@ jobs:
         run: composer install --prefer-dist --no-interaction --no-suggest
 
       - name: Execute tests
-        run: vendor/bin/pest --coverage
+        run: vendor/bin/pest
